fix on mobile

--- a/ecommerce/styles/Marquee.module.css
+++ b/ecommerce/styles/Marquee.module.css
@@ -41,7 +41,7 @@
 @media screen and (max-width: 768px) {
     .maylike-products-wrapper h2{
         text-align: center;
-        margin: 30px 0 10px 0;
+        margin: 0 0 10px 0;
         color: #892331;
     }
     
